--- a/client/templates/includes/access_denied.html
+++ b/client/templates/includes/access_denied.html
@@ -2,6 +2,6 @@
 <template name="accessDenied">
   <div class="access-denied page jumbotron">
     <h2>Access Denied</h2>
-    <p>You can't get here! Please log in.</p>
+    <p>You must be logged in to submit a post.</p>
   </div>
 </template>
